--- a/style.css
+++ b/style.css
@@ -31,6 +31,6 @@ body {
 .logo {
     width: 152px;
     height: 66px;
-    background: url(imagens/logo.png);
+    background: url(imagens/logo.png) no-repeat center;
     text-indent: 300px;
 }
