Barra de navegação
configurando barra de navegação Horizontal.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Paletas 
+/* Paletas desejadas 
 .color1 { #8d7966 };
 .color2 { #a8a39d };
 .color3 { #d8c8b8 };
@@ -13,19 +13,20 @@
 
 body {
     font-family: 'Trebuchet MS', Helvetica, sans-serif;
-    background: #f8f1e9;
+    background: #fff url(imagens/fundo.png) repeat-x; 
 }
 
 #container {
     width: 750px;
-    margin: 0;
+    margin: 0 auto;
+    padding: 0;
 }
 
 #topo {
     height: 150px;
-    background: #a8a39d ;
+    background: url(imagens/detalhe-topo.png) no-repeat right top;
     padding-top: 25px;
-    border: 1px solid red;
+/*    border: 1px solid red;*/
 }
 
 .logo {
@@ -33,4 +34,47 @@ body {
     height: 66px;
     background: url(imagens/logo.png) no-repeat center;
     text-indent: 300px;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+#topo ul {
+    margin-top: 30px;
+    background: #b10333;
+    float: left;
+}
+
+#topo ul li {
+    float: left;
+}
+
+#topo ul a {
+    font-size: 0.9em;
+    display: block;
+    padding: 0.5em 1.5em;
+    line-height: 2.1em;
+    text-decoration: none;
+    color: #fff;
+    background: url(imagens/divisor.png) no-repeat left center;
+}
+
+#topo ul .primeiro a {
+    background: none;
+}
+
+#topo ul a:hover {
+    color: #69001d;
+}
+
+body.home #navegacao a#home,
+body.brasil #navegacao a#brasil,
+body.internacional #navegacao a#internacional,
+body.fotos #navegacao a#fotos{
+    color: #fff;
+    background: #de003e;
+    cursor: text;
 }
