--- a/style.css
+++ b/style.css
@@ -78,3 +78,74 @@ body.fotos #navegacao a#fotos{
     background: #de003e;
     cursor: text;
 }
+
+/* Configura layout de três colunas*/
+
+#conteudo {
+    margin-top: 60px;
+    background: #f5f5f5;
+}
+
+#lateral {
+    width: 180px;
+    margin: 0 0 20px -750px;
+    float: left;
+   background: green;
+}
+
+#primario {
+    width: 270px;
+    float: left;
+    margin: 0 0 20px 195px;
+    background: blue;
+}
+
+#duas-colunas #primario {
+    width: 555px;
+}
+
+#uma-coluna #primario {
+    width: 750px;
+    margin: 0 0 20px 0;
+}
+
+#secundario {
+    width: 270px;
+    margin: 0 0 20px 15px;
+    float: left;
+    background: yellow;
+}
+
+/*Caixa*/
+
+#caixa {
+    margin: 10px 0;
+    padding: 5px 0 5px 0;
+    background: #f3f3f3 url(imagens/fundo-caixa.png);
+}
+
+h2 {
+    font-size: 1em;
+    background: #294c71;
+    color: #fff;    
+    padding: 5px;
+}
+
+.caixa-conteudo {
+    background: #fff;
+    padding: 5px;
+    margin-top: 5px;
+}
+
+/*Rodape*/
+
+#container-rodape {
+    background: #294c71;
+    padding: 20px;
+}
+
+#dodape {
+    width: 750px;
+    margin: 0 auto;
+    color: #fff;
+}
