--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ body {
     height: 150px;
     background: url(imagens/detalhe-topo.png) no-repeat right top;
     padding-top: 25px;
-/*    border: 1px solid red;*/
 }
 
 .logo {
@@ -90,14 +89,12 @@ body.fotos #navegacao a#fotos{
     width: 180px;
     margin: 0 0 20px -750px;
     float: left;
-   background: green;
 }
 
 #primario {
     width: 270px;
     float: left;
     margin: 0 0 20px 195px;
-    background: blue;
 }
 
 #duas-colunas #primario {
@@ -113,7 +110,6 @@ body.fotos #navegacao a#fotos{
     width: 270px;
     margin: 0 0 20px 15px;
     float: left;
-    background: yellow;
 }
 
 /*Caixa*/
@@ -137,6 +133,42 @@ h2 {
     margin-top: 5px;
 }
 
+/* Menus Lateira*/
+
+#lateral ul a {
+    font-size: 0.9em;
+    padding: 3px;
+    display: block;
+    line-height: 30px;
+    color: #000;
+    text-decoration: none;
+    border-bottom: 1px solid #f3f3f3;
+}
+
+#lateral ul a:hover {
+    background: #f9f9f9 url(imagens/marcador.png) no-repeat left center;
+    padding-left: 20px;
+    color: #a1a1a1;
+}
+
+label {
+    display: block;
+    cursor: pointer;
+}
+
+input {
+    padding: 5px;
+    width: 125px;
+    font-size: 0.8em;
+    background: #fff;
+}
+
+input.submit {
+    width: 80px;
+    color: #fff;
+    background-color: #b10333;
+    border: 2px solid #870529;
+}
 /*Rodape*/
 
 #container-rodape {
