--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ h2 {
     margin-top: 5px;
 }
 
-/* Menus Lateira*/
+/* Menus Lateiral*/
 
 #lateral ul a {
     font-size: 0.9em;
@@ -169,7 +169,33 @@ input.submit {
     background-color: #b10333;
     border: 2px solid #870529;
 }
-/*Rodape*/
+/*Imagens*/
+
+img.imagem-principal {
+    width: 98%;
+    border: 3px solid #dfdfdf;
+}
+
+/*Cabeçalhos*/
+
+h3 {
+    text-transform: uppercase;
+    display: inline;
+    font-size: 0.8em;
+    padding: 3px;
+}
+
+.destaque h3 {
+    background: #b10333;
+    color: #fff;
+}
+
+.entrevista h3 {
+    background: #de003e;
+    color: #fff;
+}
+
+/*Rodapé*/
 
 #container-rodape {
     background: #294c71;
