--- a/style.css
+++ b/style.css
@@ -35,6 +35,17 @@ body {
     text-indent: 300px;
 }
 
+/*Barra Navegação*/
+
+a:link a:visited {
+    color: #b10333;
+    padding: 2px;
+}
+
+a:hover {
+    color: #e50040;
+}
+
 ul {
     margin: 0;
     padding: 0;
@@ -220,6 +231,7 @@ h3 {
 
 #lista-noticias li a p {
     font-size: 0.7em;
+    color: #000;
 }
 
 #lista-noticias li:hover {
